--- a/System for notebook management/System for notebook management/System for notebook management/Views/NotebookSpecifications/Details.cshtml
+++ b/System for notebook management/System for notebook management/System for notebook management/Views/NotebookSpecifications/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectR.Models.Company
+﻿@model ProjectR.Models.NotebookSpecifications
 
 @{
     ViewData["Title"] = "Details";
@@ -83,44 +83,44 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Company</h4>
+    <h4>NotebookSpecifications</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Weight)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Weight)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.YearOfCreation)
+            @Html.DisplayNameFor(model => model.IsRecyclable)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.YearOfCreation)
+            @Html.DisplayFor(model => model.IsRecyclable)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.companyMembers)
+            @Html.DisplayNameFor(model => model.HasRuler)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.companyMembers)
+            @Html.DisplayFor(model => model.HasRuler)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AnnualRevenue)
+            @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AnnualRevenue)
+            @Html.DisplayFor(model => model.CreatedDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoldNotebooks)
+            @Html.DisplayNameFor(model => model.Material)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SoldNotebooks)
+            @Html.DisplayFor(model => model.Material)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.CoverColor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.CoverColor)
         </dd>
     </dl>
 </div>
