--- a/System for notebook management/System for notebook management/System for notebook management/Views/Notebooks/Index.cshtml
+++ b/System for notebook management/System for notebook management/System for notebook management/Views/Notebooks/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model IEnumerable<ProjectR.Models.Company>
+﻿@model IEnumerable<ProjectR.Models.Notebook>
 
 @{
     ViewData["Title"] = "Index";
 }
+
 <style>
     body {
         font-family: 'Arial', sans-serif;
@@ -133,62 +134,72 @@
         color: #000;
     }
 </style>
+
 <h1>Index</h1>
+
+<p>
+    <form method="get">
+        <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" placeholder="Search by Name or Company" />
+        <input type="submit" value="Search" />
+    </form>
+</p>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.ActionLink("Name", "Index", new { sortOrder = ViewData["NameSortParm"], searchString = ViewData["CurrentFilter"] })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.YearOfCreation)
+                @Html.ActionLink("Price", "Index", new { sortOrder = ViewData["PriceSortParm"], searchString = ViewData["CurrentFilter"] })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.companyMembers)
+                Company
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AnnualRevenue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoldNotebooks)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
+                @Html.DisplayNameFor(model => model.NumberOfPages)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.YearOfCreation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.companyMembers)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AnnualRevenue)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoldNotebooks)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+                <tr>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.Company.Name)
+                    </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.NumberOfPages)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+        }
     </tbody>
 </table>
+
+<!-- Странициране -->
+<div>
+    <ul class="pagination">
+        @for (int i = 1; i <= (int)ViewData["TotalPages"]; i++)
+        {
+                <li class="page-item @(i == (int)ViewData["CurrentPage"] ? "active" : "")">
+                    <a class="page-link" href="@Url.Action("Index", new { page = i, sortOrder = ViewData["CurrentSort"], searchString = ViewData["CurrentFilter"] })">@i</a>
+                </li>
+        }
+    </ul>
+</div>
