--- a/System for notebook management/System for notebook management/System for notebook management/Views/Shared/_Layout.cshtml
+++ b/System for notebook management/System for notebook management/System for notebook management/Views/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Notebooks" asp-action="Index">Search</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NotebookSpecifications" asp-action="Index">NotebookSpecifications</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
